--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
     </nav>
 
+  
     <div class="content container">
-
+ <!-- carrousel -->
       <div class="title text-center w-50 m-auto">
         <h3 class="fw-bold">lorem ipsum...</h3>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
@@ -65,8 +66,15 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-3 mt-4 d-none d-md-block">
+
+
+
+
+
+
+      <!-- opciones y texto -->
+    <div id="textosyops">
+        <div id="ops">
           <ul class="list-group">
             <li class="list-group-item">An item</li>
             <li class="list-group-item">A second item</li>
@@ -75,54 +83,58 @@
             <li class="list-group-item">And a fifth one</li>
           </ul>
         </div>
-        <div class="col">
-          <div class="texto">
-            <div class="row column-container">
-              <div class="col-6 col-sm-4 col-md-3 m-3 column">
+        
+          <div id="textos">
+              <div class="texto">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
                 dolorem sint laborum porro minima explicabo
               </div>
-              <div class="col-6 col-sm-4 col-md-3 m-3 column">
+              <div class="texto" >
                 sit et possimus aliquid sapiente rerum sunt natus reprehenderit nesciunt ipsum, illum tenetur nam? Error
                 quo
                 veniam aliquam cum molestiae. Quia perspiciatis,
               </div>
-              <div class="col-6 col-sm-4 col-md-3 m-3 column">
+              <div class="texto" >
                 praesentium quo saepe numquam, rem ex distinctio consectetur ea, et aspernatur illo qui? Dolores ipsam
                 tenetur numquam quis, odio quae
               </div>
-            </div>
-            <div class="row column-container">
-              <div class="col-6 col-md-3 m-3 column">
+              <div class="texto" >
                 perferendis maxime. Consectetur quibusdam laborum deserunt est sunt! Quisquam maiores ea eum tempore
                 exercitationem? Delectus vel ex deleniti odio, error libero minus quidem numquam.
               </div>
-              <div class="col-6 col-md-3 m-3 column">
+              <div class="texto" >
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
                 dolorem sint laborum porro minima explicabo
               </div>
-              <div class="col-6 col-md-3 m-3 column">
+              <div class="texto">
                 sit et possimus aliquid sapiente rerum sunt natus reprehenderit nesciunt ipsum, illum tenetur nam? Error
                 quo
                 veniam aliquam cum molestiae. Quia perspiciatis,
               </div>
-            </div>
-            <div class="row column-container">
-              <div class="col-6 col-md-3 m-3 column">
+              <div class="texto">
                 praesentium quo saepe numquam, rem ex distinctio consectetur ea, et aspernatur illo qui? Dolores ipsam
                 tenetur numquam quis, odio quae, corporis possimus assumenda porro adipisci animi nihil tempora corrupti
                 magnam, obcaecati modi
               </div>
-              <div class="col-6 col-md-3 m-3 column">
+              <div class="texto">
                 perferendis maxime. Consectetur quibusdam laborum deserunt est sunt! Quisquam maiores ea eum tempore
                 exercitationem?
                 Delectus vel ex deleniti odio, error libero minus quidem numquam.
               </div>
             </div>
-          </div>
-        </div>
-      </div>
     </div>
+      <!-- opciones y texto fin -->
+
+
+
+
+
+
+
+
+
+
+
   </main>
 
   <footer class="text-muted py-3">
