--- a/index.html
+++ b/index.html
@@ -90,36 +90,32 @@
                 dolorem sint laborum porro minima explicabo
               </div>
               <div class="texto" >
-                sit et possimus aliquid sapiente rerum sunt natus reprehenderit nesciunt ipsum, illum tenetur nam? Error
-                quo
-                veniam aliquam cum molestiae. Quia perspiciatis,
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
+                dolorem sint laborum porro minima explicabo
               </div>
               <div class="texto" >
-                praesentium quo saepe numquam, rem ex distinctio consectetur ea, et aspernatur illo qui? Dolores ipsam
-                tenetur numquam quis, odio quae
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
+                dolorem sint laborum porro minima explicabo
               </div>
               <div class="texto" >
-                perferendis maxime. Consectetur quibusdam laborum deserunt est sunt! Quisquam maiores ea eum tempore
-                exercitationem? Delectus vel ex deleniti odio, error libero minus quidem numquam.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
+                dolorem sint laborum porro minima explicabo
               </div>
               <div class="texto" >
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
                 dolorem sint laborum porro minima explicabo
               </div>
               <div class="texto">
-                sit et possimus aliquid sapiente rerum sunt natus reprehenderit nesciunt ipsum, illum tenetur nam? Error
-                quo
-                veniam aliquam cum molestiae. Quia perspiciatis,
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
+                dolorem sint laborum porro minima explicabo
               </div>
               <div class="texto">
-                praesentium quo saepe numquam, rem ex distinctio consectetur ea, et aspernatur illo qui? Dolores ipsam
-                tenetur numquam quis, odio quae, corporis possimus assumenda porro adipisci animi nihil tempora corrupti
-                magnam, obcaecati modi
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
+                dolorem sint laborum porro minima explicabo
               </div>
               <div class="texto">
-                perferendis maxime. Consectetur quibusdam laborum deserunt est sunt! Quisquam maiores ea eum tempore
-                exercitationem?
-                Delectus vel ex deleniti odio, error libero minus quidem numquam.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non numquam corrupti fuga illo quo tempora
+                dolorem sint laborum porro minima explicabo
               </div>
             </div>
     </div>
