--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
           <a id="link2">Dolor</a>
           <a id="link3">Sit</a>
           <a id="link4">Amet</a>
-          <a id="link5">Opciones</a>
+          <a id="link5" onclick="opciones()">Opciones</a>
         </div>
+     
 
         <div id="searchBar" class="smallMenu">
           <form>
@@ -45,11 +46,19 @@
       </div>
 
     </nav>
-
+    <div id="opcionesDiv" class="showDiv">
+      <ul class="list-group">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
+    </div>
   
     <div class="content container">
  <!-- carrousel -->
-      <div class="title text-center w-50 m-auto">
+      <div class="title text-center w-50 m-auto" id="carrousel">
         <h3 class="fw-bold">lorem ipsum...</h3>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
           <div class="carousel-inner">
@@ -76,11 +85,11 @@
     <div id="textosyops">
         <div id="ops">
           <ul class="list-group">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
+            <li class="list-group-item lista">An item</li>
+            <li class="list-group-item lista">A second item</li>
+            <li class="list-group-item lista">A third item</li>
+            <li class="list-group-item lista">A fourth item</li>
+            <li class="list-group-item lista">And a fifth one</li>
           </ul>
         </div>
         
